--- a/BuildPod.yaml
+++ b/BuildPod.yaml
@@ -4,6 +4,7 @@ metadata:
   labels: 
     app: jenkins-ephemeral
 spec:
+  serviceAccountName: jenkins
   volumes: 
   - name: docker-sock
     hostPath:
