--- a/BuildPod.yaml
+++ b/BuildPod.yaml
@@ -10,6 +10,11 @@ spec:
     hostPath:
       path: /var/run/docker.sock
   containers:
+  - name: origin
+    image: openshift/origin-cli
+    command: 
+    - cat
+    tty: true
   - name: docker
     image: docker:18.06.1-ce
     command:
