--- a/oc/template.yaml
+++ b/oc/template.yaml
@@ -31,7 +31,7 @@ objects:
         labels: 
           template: ace
           version: "1.0"
-          reateapp: "${APPLICATION_NAME}"
+          app: "${APPLICATION_NAME}"
       spec:
         containers:
         - name: ace
