--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -31,7 +31,8 @@ pipeline{
 				stage('Build ACE'){
 					steps{
 						container('kaniko'){
-							sh "/kaniko/executor --context `pwd` --verbosity debug --destination ${registry}/${project}/${app}-api:${tag}"
+							sh ''
+							sh "/kaniko/executor --context `pwd` --dockerfile `pwd`/Dockerfile --verbosity debug --destination ${registry}/${project}/${app}-api:${tag}"
 							//sh "docker build -t ${registry}/${project}/${app}-api:${tag} ."
 							//sh 'docker login -u $(whoami) -p $(cat /var/run/secrets/kubernetes.io/serviceaccount/token) ' + registry + '/' + project
 							//sh "docker push ${registry}/${project}/${app}-api:${tag}"
