--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -23,6 +23,7 @@ pipeline{
 			steps{
 				container('ace'){
 					sh "bash -c 'mqsipackagebar -a compiled.bar -w . -k ApiCalculadora'"
+					sh "bash -c 'sudo chown build:build compiled.bar'"
 				}
 			}
    	}
