--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -24,9 +24,6 @@ pipeline{
 				container('ace'){
 					sh "bash -c 'mqsipackagebar -a compiled.bar -w . -k ApiCalculadora'"
 				}
-				container('jnlp'){
-					sh "bash -c 'chown build:build compiled.bar'"
-				}
 			}
    	}
 		stage('Docker build'){
@@ -34,6 +31,7 @@ pipeline{
 				stage('Build ACE'){
 					steps{
 						container('buildah'){
+							sh "groupadd --gid 1001 mqbrkrs"
 							sh "stat compiled.bar"
 							sh "sudo buildah build-using-dockerfile ."
 							//sh "docker build -t ${registry}/${project}/${app}-api:${tag} ."
