--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -30,14 +30,19 @@ pipeline{
 			parallel{
 				stage('Build ACE'){
 					steps{
+						/*
 						container('buildah'){
 							sh "groupadd --gid 1001 mqbrkrs"
 							sh "stat compiled.bar"
 							//sh "sudo buildah build-using-dockerfile ."
-							sh "sudo ibmcloud/build.sh"
+							sh "ibmcloud/build.sh"
 							//sh "docker build -t ${registry}/${project}/${app}-api:${tag} ."
 							//sh 'docker login -u $(whoami) -p $(cat /var/run/secrets/kubernetes.io/serviceaccount/token) ' + registry + '/' + project
 							//sh "docker push ${registry}/${project}/${app}-api:${tag}"
+						}
+						*/
+						container('kaniko'){
+							sh "/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd`"
 						}
 					}
 				}
