Test on IBM Cloud with Kaniko

--- a/ibmcloud/BuildPod.yaml
+++ b/ibmcloud/BuildPod.yaml
@@ -16,6 +16,7 @@ spec:
 #      privileged: true
   - name: kaniko
     image: ppintogbm/kaniko:jenkins
+    imagePullPolicy: Always
     command:
     - cat
     tty: true
