--- a/ibmcloud/BuildPod.yaml
+++ b/ibmcloud/BuildPod.yaml
@@ -4,23 +4,26 @@ metadata:
   labels: 
     app: jenkins-ephemeral
 spec:
+  volumes:
+  - name: docker-credentials
+    projected:
+      sources:
+      - secret: 
+        - name: ibmcloud-cr
+          items:
+          - key: .dockerconfigjson
+            path: config.json    
   serviceAccountName: jenkinsci
   containers:
-#  - name: buildah
-#    image: quay.io/buildah/stable
-#    command:
-#    - cat
-#    tty: true
-#    securityContext:
-#      allowPrivilegeEscalation: true
-#      privileged: true
   - name: kaniko
-#    image: ppintogbm/kaniko:jenkins
     image: gcr.io/kaniko-project/executor:debug
     imagePullPolicy: Always
     command:
     - /busybox/cat
     tty: true
+    volumeMounts:
+    - name: docker-credentials
+      mountPath: /kaniko/.docker
   - name: ace
     image: ibmcom/ace
     command: 
