--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline{
   }
 	parameters{
 		string(defaultValue: "jenkins", description: "Project/Namespace name", name: "project")
-		string(defaultValue: "172.30.1.1:5000", description: "Registry",  name:"registry")
+		string(defaultValue: "us.icr.io", description: "Registry",  name:"registry")
 		string(defaultValue: "api-calculadora", description: "App Name", name: "app")
 	}
 	stages{
@@ -46,7 +46,7 @@ pipeline{
 						*/
 						container('kaniko'){
 							sh  '''#!/busybox/sh
-									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --no-push --verbosity debug
+									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --destination=${registry}/${project}/${app}:${tag}
 								  '''
 						}
 					}
