Test on IBM Cloud with Kaniko

--- a/ibmcloud/BuildPod.yaml
+++ b/ibmcloud/BuildPod.yaml
@@ -9,7 +9,7 @@ spec:
     projected:
       sources:
       - secret: 
-        - name: ibmcloud-cr
+          name: ibmcloud-cr
           items:
           - key: .dockerconfigjson
             path: config.json    
