Tag test for kaniko

--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -45,8 +45,9 @@ pipeline{
 						}
 						*/
 						container('kaniko'){
+							echo "Image to built: ${registry}/${project}/${app}:${tag}"
 							sh  '''#!/busybox/sh
-									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --destination=${registry}/${project}/${app}:${tag}
+									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --destination="${registry}/${project}/${app}:${tag}"
 								  '''
 						}
 					}
