--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -50,7 +50,7 @@ pipeline{
 							}
 							echo "Image to built: ${destination}"
 							sh  '''#!/busybox/sh
-									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --verbosity debug --destination="${destination}"
+									/kaniko/executor --dockerfile=`pwd`/Dockerfile --context=`pwd` --verbosity debug --destination=${destination}
 								  '''
 						}
 					}
@@ -66,7 +66,7 @@ pipeline{
 							}
 							echo "Image to built: ${destination}"
 							sh  '''#!/busybox/sh
-									/kaniko/executor --dockerfile=`pwd`/database/Dockerfile --context=`pwd`/database --verbosity debug --destination="${destination}"
+									/kaniko/executor --dockerfile=`pwd`/database/Dockerfile --context=`pwd`/database --verbosity debug --destination=${destination}
 								  '''
 						}	
 					}
