--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -46,7 +46,7 @@ pipeline{
 						*/
 						container('kaniko'){
 							script{
-								destination = "${registry}/${project}/${app}-api:${tag}"
+								destination = "${registry}/${project}/${app}-api:latest"
 							}
 							echo "Image to built: ${destination}"
 							sh  '''#!/busybox/sh
@@ -62,7 +62,7 @@ pipeline{
 							//sh 'docker login -u $(whoami) -p $(cat /var/run/secrets/kubernetes.io/serviceaccount/token) ' + registry + '/' + project
 							//sh "docker push ${registry}/${project}/${app}-db:${tag}"
 							script{
-								destination = "${registry}/${project}/${app}-db:${tag}"
+								destination = "${registry}/${project}/${app}-db:latest"
 							}
 							echo "Image to built: ${destination}"
 							sh  '''#!/busybox/sh
