--- a/ibmcloud/Jenkinsfile
+++ b/ibmcloud/Jenkinsfile
@@ -44,7 +44,7 @@ pipeline{
 				*/
 				container('kaniko'){
 					script{
-						pushDir = "${registry}\/${project}\/${app}-api:${tag}"
+						pushDir = "${registry}/${project}/${app}-api:${tag}"
 					}
 					//echo "Image to built: ${pushDir}"
 					sh  '''#!/busybox/sh
@@ -60,7 +60,7 @@ pipeline{
 					//sh 'docker login -u $(whoami) -p $(cat /var/run/secrets/kubernetes.io/serviceaccount/token) ' + registry + '/' + project
 					//sh "docker push ${registry}/${project}/${app}-db:${tag}"
 					script{
-						pushDir = "${registry}\/${project}\/${app}-db:${tag}"
+						pushDir = "${registry}/${project}/${app}-db:${tag}"
 					}
 					echo "Image to built: ${pushDir}"
 					sh  '''#!/busybox/sh
